feat(api): チューナー設定に利用可能なチューナー名リストを追加
